double refactor: improve API architecture and code organization